[gd_scene load_steps=21 format=3 uid="uid://d0xbi6t0b2vbd"]

[ext_resource type="Script" uid="uid://cqxlmo30gty7l" path="res://scenes/customize_scene.gd" id="1_j84h7"]
[ext_resource type="Texture2D" uid="uid://74frmjaqi1ns" path="res://assets/ui/right_arrow.png" id="2_h4jc1"]
[ext_resource type="Texture2D" uid="uid://c8pr57efekt5l" path="res://assets/ui/close_button.png" id="3_5ayll"]
[ext_resource type="Texture2D" uid="uid://bxt5dmljunqiy" path="res://assets/sprites/fishermans/face_a.png" id="3_jw0b7"]
[ext_resource type="Texture2D" uid="uid://bmcpshn44opkk" path="res://assets/sprites/fishermans/hat_a.png" id="4_dprt2"]
[ext_resource type="Texture2D" uid="uid://c2xw4526n27fw" path="res://assets/ui/fire_icon.png" id="4_mcwgx"]
[ext_resource type="Texture2D" uid="uid://c8ujrss2xwqug" path="res://assets/sprites/fishermans/body_a.png" id="5_2pnih"]
[ext_resource type="Texture2D" uid="uid://mkr2ayquatc4" path="res://assets/ui/fish_icon.png" id="5_t0lw2"]
[ext_resource type="FontFile" uid="uid://clsxpqfmryyob" path="res://assets/fonts/upheaval/upheavtt.ttf" id="6_5ayll"]
[ext_resource type="Texture2D" uid="uid://cqmy0xop3ayrv" path="res://assets/sprites/fishermans/back_body.png" id="9_c4e0f"]
[ext_resource type="PackedScene" uid="uid://b7o878bg7yltg" path="res://ui/card_selector.tscn" id="10_4tpme"]
[ext_resource type="Texture2D" uid="uid://cviosxqcg33ak" path="res://assets/sprites/fishermans/front_body.png" id="10_11g7p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdcre"]
bg_color = Color(0.462745, 0.45098, 0.784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 8
border_color = Color(0.396078, 0.235294, 0.713726, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg1i5"]
bg_color = Color(0.396078, 0.235294, 0.713726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 8
border_color = Color(0.396078, 0.235294, 0.713726, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0jxx"]
bg_color = Color(0.169601, 0.497842, 0.00860895, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 8
border_color = Color(0.133333, 0.333333, 0.333333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6abr"]
bg_color = Color(0.270588, 0.74902, 0.0156863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 8
border_color = Color(0.133333, 0.333333, 0.333333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_xjfl5"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSelector:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4tpme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSelector:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c4e0f"]
resource_name = "confirm_customize"
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardSelector:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardSelector")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_show_class_cards"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4e0f"]
_data = {
&"RESET": SubResource("Animation_4tpme"),
&"confirm_customize": SubResource("Animation_c4e0f"),
&"idle": SubResource("Animation_xjfl5")
}

[node name="CustomizeScene" type="Control" node_paths=PackedStringArray("anim", "head", "hat", "body")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j84h7")
anim = NodePath("AnimationPlayer")
head = NodePath("Panel/CustomizePanel/Character/Head")
hat = NodePath("Panel/CustomizePanel/Character/Head/Hat")
body = NodePath("Panel/CustomizePanel/Character/Head/Body")
head_textures = Array[Texture]([ExtResource("3_jw0b7")])
hat_textures = Array[Texture]([ExtResource("4_dprt2"), ExtResource("3_5ayll"), ExtResource("4_mcwgx"), ExtResource("5_t0lw2")])
body_textures = Array[Texture]([ExtResource("5_2pnih")])

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CustomizePanel" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Left" type="Control" parent="Panel/CustomizePanel"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="LeftButtons" type="VBoxContainer" parent="Panel/CustomizePanel/Left"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -264.0
offset_right = 64.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HatLeft" type="TextureButton" parent="Panel/CustomizePanel/Left/LeftButtons"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
texture_normal = ExtResource("2_h4jc1")
texture_pressed = ExtResource("2_h4jc1")
texture_hover = ExtResource("2_h4jc1")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="FaceLeft" type="TextureButton" parent="Panel/CustomizePanel/Left/LeftButtons"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
texture_normal = ExtResource("2_h4jc1")
texture_pressed = ExtResource("2_h4jc1")
texture_hover = ExtResource("2_h4jc1")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="BodyLeft" type="TextureButton" parent="Panel/CustomizePanel/Left/LeftButtons"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
texture_normal = ExtResource("2_h4jc1")
texture_pressed = ExtResource("2_h4jc1")
texture_hover = ExtResource("2_h4jc1")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="Character" type="Control" parent="Panel/CustomizePanel"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="Head" type="TextureRect" parent="Panel/CustomizePanel/Character"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -232.0
offset_right = 112.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_jw0b7")
stretch_mode = 5

[node name="Hat" type="TextureRect" parent="Panel/CustomizePanel/Character/Head"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = -64.0
offset_right = 108.0
offset_bottom = 176.0
grow_horizontal = 2
texture = ExtResource("4_dprt2")
expand_mode = 1
stretch_mode = 5

[node name="Body" type="TextureRect" parent="Panel/CustomizePanel/Character/Head"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_top = 125.0
offset_right = 116.0
offset_bottom = 430.0
grow_horizontal = 2
texture = ExtResource("5_2pnih")
stretch_mode = 5

[node name="BackBody" type="TextureRect" parent="Panel/CustomizePanel/Character"]
modulate = Color(0.927673, 0.790431, 0.59267, 1)
custom_minimum_size = Vector2(360, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -224.0
offset_right = 180.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_c4e0f")
expand_mode = 1
stretch_mode = 5

[node name="FrontBody" type="TextureRect" parent="Panel/CustomizePanel/Character/BackBody"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_11g7p")
expand_mode = 1
stretch_mode = 5

[node name="Right" type="Control" parent="Panel/CustomizePanel"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="RightButtons" type="VBoxContainer" parent="Panel/CustomizePanel/Right"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -264.0
offset_right = 64.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HatRight" type="TextureButton" parent="Panel/CustomizePanel/Right/RightButtons"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
texture_normal = ExtResource("2_h4jc1")
texture_pressed = ExtResource("2_h4jc1")
texture_hover = ExtResource("2_h4jc1")
ignore_texture_size = true
stretch_mode = 5

[node name="FaceRight" type="TextureButton" parent="Panel/CustomizePanel/Right/RightButtons"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
texture_normal = ExtResource("2_h4jc1")
texture_pressed = ExtResource("2_h4jc1")
texture_hover = ExtResource("2_h4jc1")
ignore_texture_size = true
stretch_mode = 5

[node name="BodyRight" type="TextureButton" parent="Panel/CustomizePanel/Right/RightButtons"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
texture_normal = ExtResource("2_h4jc1")
texture_pressed = ExtResource("2_h4jc1")
texture_hover = ExtResource("2_h4jc1")
ignore_texture_size = true
stretch_mode = 5

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -152.0
offset_right = 286.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 64
alignment = 1

[node name="Randomize" type="Button" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_5ayll")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxFlat_jdcre")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jdcre")
theme_override_styles/hover = SubResource("StyleBoxFlat_bg1i5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bg1i5")
theme_override_styles/normal = SubResource("StyleBoxFlat_jdcre")
text = "Randomize"
icon_alignment = 2

[node name="Confirm" type="Button" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_5ayll")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxFlat_g0jxx")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g0jxx")
theme_override_styles/hover = SubResource("StyleBoxFlat_g0jxx")
theme_override_styles/normal = SubResource("StyleBoxFlat_k6abr")
text = "CONFIRM"

[node name="CardSelector" parent="." instance=ExtResource("10_4tpme")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4e0f")
}
autoplay = "idle"

[connection signal="button_down" from="Panel/CustomizePanel/Left/LeftButtons/HatLeft" to="." method="_on_hat_left_button_down"]
[connection signal="button_down" from="Panel/CustomizePanel/Left/LeftButtons/FaceLeft" to="." method="_on_face_left_button_down"]
[connection signal="button_down" from="Panel/CustomizePanel/Left/LeftButtons/BodyLeft" to="." method="_on_body_left_button_down"]
[connection signal="button_down" from="Panel/CustomizePanel/Right/RightButtons/HatRight" to="." method="_on_hat_right_button_down"]
[connection signal="button_down" from="Panel/CustomizePanel/Right/RightButtons/FaceRight" to="." method="_on_face_right_button_down"]
[connection signal="button_down" from="Panel/CustomizePanel/Right/RightButtons/BodyRight" to="." method="_on_body_right_button_down"]
[connection signal="button_down" from="Panel/Buttons/Randomize" to="." method="_on_randomize_button_down"]
[connection signal="button_down" from="Panel/Buttons/Confirm" to="." method="_on_confirm_button_down"]
[connection signal="back" from="CardSelector" to="." method="_on_card_selector_back"]
[connection signal="character_card_selected" from="CardSelector" to="." method="_on_card_selector_character_card_selected"]
